Add Oauth2; social login with facebook

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
 spring.datasource.generate-unique-name=false
 spring.datasource.name=shawamacloud
 spring.datasource.url=jdbc:h2:mem:shawamacloud
+spring.datasource.username=admin
+spring.datasource.password=password
+
+spring.thymeleaf.cache=false
+
+
+#USING THIRD-PARTY AUTHENTICATION
+spring.security.oauth2.client.registration.facebook.client-id=YOUR-ID
+spring.security.oauth2.client.registration.facebook.client-secret=YOUR-SECRETE
+spring.security.oauth2.client.registration.facebook.scope=email, public_profile
+#GET CLIENT ID AND SECRETE HERE: https://developers.facebook.com/
