--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.thymeleaf.cache=false
 spring.security.oauth2.client.registration.facebook.client-id=YOUR-ID
 spring.security.oauth2.client.registration.facebook.client-secret=YOUR-SECRET
 spring.security.oauth2.client.registration.facebook.scope=email, public_profile
-#GET CLIENT ID AND SECRETE HERE: https://developers.facebook.com/
+#GET CLIENT ID AND SECRET HERE: https://developers.facebook.com/
